crates/style/tests/snapshots/computed_style_goldens__inline_spans.snap
---
source: crates/style/tests/computed_style_goldens.rs
expression: "dump(include_str!(\"golden/inline-spans.html\"))"
---
#document
| <html>
|   display: block
|   position: static
|   width: auto
|   height: auto
|   margin-top: 0px
|   margin-right: 0px
|   margin-bottom: 0px
|   margin-left: 0px
|   padding-top: 0px
|   padding-right: 0px
|   padding-bottom: 0px
|   padding-left: 0px
|   border-top-width: 3px
|   border-right-width: 3px
|   border-bottom-width: 3px
|   border-left-width: 3px
|   color: rgb(0, 0, 0)
|   background-color: rgba(0, 0, 0, 0)
|   font-size: 16px
|   font-weight: 400
|   line-height: normal
|   text-align: start
|   white-space-collapse: collapse
|   text-wrap-mode: wrap
|   <head>
|     display: none
|     position: static
|     width: auto
|     height: auto
|     margin-top: 0px
|     margin-right: 0px
|     margin-bottom: 0px
|     margin-left: 0px
|     padding-top: 0px
|     padding-right: 0px
|     padding-bottom: 0px
|     padding-left: 0px
|     border-top-width: 3px
|     border-right-width: 3px
|     border-bottom-width: 3px
|     border-left-width: 3px
|     color: rgb(0, 0, 0)
|     background-color: rgba(0, 0, 0, 0)
|     font-size: 16px
|     font-weight: 400
|     line-height: normal
|     text-align: start
|     white-space-collapse: collapse
|     text-wrap-mode: wrap
|     <style>
|       (no computed style)
|   <body>
|     display: block
|     position: static
|     width: auto
|     height: auto
|     margin-top: 8px
|     margin-right: 8px
|     margin-bottom: 8px
|     margin-left: 8px
|     padding-top: 0px
|     padding-right: 0px
|     padding-bottom: 0px
|     padding-left: 0px
|     border-top-width: 3px
|     border-right-width: 3px
|     border-bottom-width: 3px
|     border-left-width: 3px
|     color: rgb(0, 0, 0)
|     background-color: rgba(0, 0, 0, 0)
|     font-size: 16px
|     font-weight: 400
|     line-height: normal
|     text-align: start
|     white-space-collapse: collapse
|     text-wrap-mode: wrap
|     <p>
|       display: block
|       position: static
|       width: auto
|       height: auto
|       margin-top: 20px
|       margin-right: 0px
|       margin-bottom: 20px
|       margin-left: 0px
|       padding-top: 0px
|       padding-right: 0px
|       padding-bottom: 0px
|       padding-left: 0px
|       border-top-width: 3px
|       border-right-width: 3px
|       border-bottom-width: 3px
|       border-left-width: 3px
|       color: rgb(0, 0, 128)
|       background-color: rgba(0, 0, 0, 0)
|       font-size: 20px
|       font-weight: 400
|       line-height: 1.5
|       text-align: start
|       white-space-collapse: collapse
|       text-wrap-mode: wrap
|       <span>
|         display: inline
|         position: static
|         width: auto
|         height: auto
|         margin-top: 0px
|         margin-right: 0px
|         margin-bottom: 0px
|         margin-left: 0px
|         padding-top: 0px
|         padding-right: 0px
|         padding-bottom: 0px
|         padding-left: 0px
|         border-top-width: 3px
|         border-right-width: 3px
|         border-bottom-width: 3px
|         border-left-width: 3px
|         color: rgb(0, 0, 128)
|         background-color: rgba(0, 0, 0, 0)
|         font-size: 20px
|         font-weight: 400
|         line-height: 1.5
|         text-align: start
|         white-space-collapse: collapse
|         text-wrap-mode: wrap
|       <span>
|         display: inline
|         position: static
|         width: auto
|         height: auto
|         margin-top: 0px
|         margin-right: 0px
|         margin-bottom: 0px
|         margin-left: 0px
|         padding-top: 0px
|         padding-right: 0px
|         padding-bottom: 0px
|         padding-left: 0px
|         border-top-width: 3px
|         border-right-width: 3px
|         border-bottom-width: 3px
|         border-left-width: 3px
|         color: rgb(0, 0, 128)
|         background-color: rgb(255, 255, 0)
|         font-size: 20px
|         font-weight: 700
|         line-height: 1.5
|         text-align: start
|         white-space-collapse: collapse
|         text-wrap-mode: wrap
